--- a/.github/workflows/panvimdoc.yml
+++ b/.github/workflows/panvimdoc.yml
@@ -10,13 +10,15 @@ on:
 jobs:
   panvimdoc:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - uses: actions/checkout@v4
       - uses: kdheepak/panvimdoc@v4.0.0
         with:
-          vimdoc: notify-send
+          vimdoc: notifications
           version: NVIM v0.9.0
           treesitter: true
       - uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: Auto generate docs
+          commit_message: "chore: auto generate docs"
